# lobotomy

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  wiki.toml
.claude/skills/setup/: SKILL.md
.claude/skills/wiki/: SKILL.md
hooks/: post-merge
templates/: default.md
tools/: pyproject.toml
tools/src/lobotomy/: __init__.py  cli.py  config.py  embeddings.py  index.py  mcp_server.py  parser.py  search.py  templates.py
